--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -1,17 +1,18 @@
 body {
   margin: 0;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
 
 a {
-  color: #00bcd4;
+  color: #000;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.4s;
 }
 
 a:hover {
-  color: #1976d2;
+  color: #333;
 }
 
 .text-center {
